// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardMetricTotals Component should handle custom card displays: fulfilled 1`] = `
<graphcardmetrictotals
  props="{
  "children": []
}"
>
  <div
    class="curiosity-usage-graph__totals"
    data-test="graphMetricTotals-hello-world"
    data-test-data="{"groupMetricId":["hello","world"]}"
  >
    <div>
      <div
        class="curiosity-usage-graph__totals-column"
      >
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-4"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-0"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-4"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                lorem
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              t(ipsum-{{data}}, {"testId":"custom test id","data":"{\\"groupMetricId\\":[\\"hello\\",\\"world\\"]}"})
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              dolor sit timestamp
            </div>
          </div>
        </article>
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-5"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-1"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-5"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                hello-{"groupMetricId":["hello","world"]}
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              world
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              dolor sit timestamp
            </div>
          </div>
        </article>
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-6"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-2"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-6"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                dolor
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              sit
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              dolor sit timestamp-{"groupMetricId":["hello","world"]}
            </div>
          </div>
        </article>
      </div>
    </div>
    <div>
      <div
        class="curiosity-usage-graph__totals-graph-column"
      />
    </div>
  </div>
</graphcardmetrictotals>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: error 1`] = `
<graphcardmetrictotals
  props="{
  "children": []
}"
>
  <div
    class="curiosity-usage-graph__totals"
    data-test="graphMetricTotals-hello-world"
    data-test-data="{"groupMetricId":["hello","world"]}"
  >
    <div>
      <div
        class="curiosity-usage-graph__totals-column"
      >
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card blur"
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-0"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              />
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div />
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div />
          </div>
        </article>
      </div>
    </div>
    <div>
      <div
        class="curiosity-usage-graph__totals-graph-column"
      />
    </div>
  </div>
</graphcardmetrictotals>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: fulfilled 1`] = `
<graphcardmetrictotals
  props="{
  "children": []
}"
>
  <div
    class="curiosity-usage-graph__totals"
    data-test="graphMetricTotals-hello-world"
    data-test-data="{"groupMetricId":["hello","world"]}"
  >
    <div>
      <div
        class="curiosity-usage-graph__totals-column"
      >
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-0"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                lorem
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              ipsum
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              dolor sit
            </div>
          </div>
        </article>
      </div>
    </div>
    <div>
      <div
        class="curiosity-usage-graph__totals-graph-column"
      />
    </div>
  </div>
</graphcardmetrictotals>
`;

exports[`GraphCardMetricTotals Component should handle multiple display states: pending 1`] = `
<graphcardmetrictotals
  props="{
  "children": []
}"
>
  <div
    class="curiosity-usage-graph__totals"
    data-test="graphMetricTotals-hello-world"
    data-test-data="{"groupMetricId":["hello","world"]}"
  >
    <div>
      <div
        class="curiosity-usage-graph__totals-column"
      >
        <article
          class="pf-c-card pf-m-plain curiosity-usage-graph__totals-column-card "
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          data-test="graphMetricTotalsCard-0"
          id=""
        >
          <div
            class="pf-c-card__header"
          >
            <div
              class="pf-c-card__title"
            >
              <h2
                class="pf-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </h2>
            </div>
          </div>
          <div
            class="pf-c-card__body"
          >
            <div>
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
                style="--pf-c-skeleton--Height: 60px;"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </div>
          </div>
          <div
            class="pf-c-card__footer"
          >
            <div>
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </div>
          </div>
        </article>
      </div>
    </div>
    <div>
      <div
        class="curiosity-usage-graph__totals-graph-column"
      />
    </div>
  </div>
</graphcardmetrictotals>
`;

exports[`GraphCardMetricTotals Component should render a basic component: basic 1`] = `
<graphcardmetrictotals
  props="{
  "children": [
    {}
  ]
}"
>
  <div
    class="curiosity-usage-graph__standalone"
    data-test="graphStandalone"
  >
    lorem ipsum
  </div>
</graphcardmetrictotals>
`;
